--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "normalize.css": "^8.0.1",
+    "pinia": "^3.0.2",
     "vue": "^3.5.13",
     "vue-router": "4"
   },
