--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "normalize.css": "^8.0.1",
     "pinia": "^3.0.2",
     "vue": "^3.5.13",
@@ -35,6 +36,7 @@
     "sass-embedded": "^1.88.0",
     "typescript": "~5.8.0",
     "vite": "^6.2.4",
+    "vite-plugin-mock": "^3.0.2",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vue-tsc": "^2.2.8"
   }
