feat: 添加 Element Plus 组件库及自动导入配置
引入 Element Plus 组件库，并配置 unplugin-auto-import 和 unplugin-vue-components 实现自动导入功能，简化组件和 API 的使用。

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,7 +2,13 @@
   // 继承Vue DOM环境的TypeScript配置
   "extends": "@vue/tsconfig/tsconfig.dom.json",
   // 包含的文件类型和路径
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
+  "include": [
+    "env.d.ts",
+    "src/**/*",
+    "src/**/*.vue",
+    "auto-imports.d.ts",
+    "components.d.ts"
+  ],
   // 排除测试文件
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
