--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "element-plus": "^2.9.10",
     "normalize.css": "^8.0.1",
     "pinia": "^3.0.2",
     "vue": "^3.5.13",
@@ -35,6 +36,8 @@
     "prettier": "3.5.3",
     "sass-embedded": "^1.88.0",
     "typescript": "~5.8.0",
+    "unplugin-auto-import": "^19.2.0",
+    "unplugin-vue-components": "^28.5.0",
     "vite": "^6.2.4",
     "vite-plugin-mock": "^3.0.2",
     "vite-plugin-vue-devtools": "^7.7.2",
